FIXED: logo anchor tag overflowing

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -21,6 +21,7 @@ nav{
         justify-content: center;
         align-items: center;
         height: 50px;
+        overflow: hidden;
         img{
             position: relative;
             width: 200px;
